--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,12 +11,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/material": "^7.1.0",
     "@tailwindcss/vite": "^4.1.1",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.9",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "country-state-city": "^3.2.1",
@@ -26,8 +24,9 @@
     "lucide-react": "^0.487.0",
     "mongoose": "^8.13.2",
     "nodemailer": "^6.10.1",
+    "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
-    "primereact": "^10.9.5",
+    "primereact": "^10.9.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -35,7 +34,8 @@
     "react-slick": "^0.30.3",
     "slick-carousel": "^1.8.1",
     "tailwindcss-animate": "^1.0.7",
-    "twilio": "^5.5.2"
+    "twilio": "^5.5.2",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
